Chapter 10 — Listing 10.12: ThreadLocalSecurityContext.java Demonstrates: Using ThreadLocal to propagate a per-thread security context